2011-02-14 Harald Oehlmann <oehhar@users.sourceforge.net>

    * entry.tcl, labelentry.tcl, labelframe.tcl, mainframe.tcl,
    pagesmgr.tcl, scrollw.tcl: [Bug 3168761]:
    entry failes when themed support activated with:
    unknown option "-highlightthickness" (reported by George
    on clt 27 Jan., 16:55).
    The patch by Wojciech Kocjan fixes this and enhances
    labelentry, labelframe and pagesmgr to also use themed frames.
    Within scrollw.tcl, a bug for empty background handling is fixed.
    The scrollbar background is not set any more for not-themed widget.

2011-01-17 Harald Oehlmann <oehhar@users.sourceforge.net>

	* pkgIndex.tcl: corrected package version in package provide

2010-12-14 Harald Oehlmann <oehhar@users.sourceforge.net>

	**** BWidget 1.9.4 tagged ****

2010-12-14  Andreas Kupries  <andreask@activestate.com>

	* tree.tcl [Bug 3106208]: Followup. Moved the fixed code of the
	last entry I did (2010-11-09) into a new command Tree::MergeFlag
	and call this from both Tree::itemconfigure and Tree::insert.
	Missing the place in Tree::insert caused another problem, found by
	Dustin Littau.

2010-11-05 Harald Oehlmann <oehhar@users.sourceforge.net>

	**** BWidget 1.9.3 tagged ****

2010-11-23 Harald Oehlmann <oehhar@users.sourceforge.net>

	* scrollw.tcl Add theming support for ScrolledWindow widget.
	* ScrolledWindow.html Themed mode documented.

2010-11-21 Harald Oehlmann <oehhar@users.sourceforge.net>

	* label.tcl Add theming support for Label widget.
	* label.html Themed mode documented.

2010-11-16 Harald Oehlmann <oehhar@users.sourceforge.net>

	* button.tcl Add theming support for Button widget.
	Option "-relief link" is mapped to "Toolbutton style.
	Option -height is not available when themed.
	Thanks to Kevin Walzer for the test on MacOS.
	* buttonbox.tcl When themed, only set themed button options.
	The widget itself is not jet themed.
	* Dialog.html Removed documentation of unavailable option -buttonwidth.
